--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </video>
     </div>
     <header class="header">
-        <a href="/">
+        <a href="#">
             <img class="logo" src="src/img/logo-chapeu-mario.png" alt="logo do chapeu do mario">
         </a>
         <nav>
@@ -50,7 +50,7 @@
             <div class="conteudo-modal">
                 <span class="fechar-modal">X</span>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk"
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk"
                     title="Trailer oficial" frameborder="1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
