--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Detalhes</a></li>
+                <li><a href="#sobre">Detalhes</a></li>
             </ul>
         </nav>
     </header>
@@ -57,6 +57,21 @@
             </div>
         </div>
     </main>
+
+    <section class="ilustracoes-filme" id="sobre">
+        <h2 class="init-hidden">Sinopse</h2>
+        <p class="init-hidden">Mario é um filme baseado na série de video games, Super Mario Bros, da Nintendo. Em Super Mario Bros. - O Filme, Mario (Chris Pratt) é um encanador qualquer no bairro de Brooklyn junto com seu irmão Luigi (Charlie Day). Um dia, Mario e Luigi vão para no reino dos cogumelos, governado pela Princesa Peach (Anya Taylor-Joy), mas ameaçado pelo rei dos Koopas, Bowser (Jack Black), que vai fazer de tudo para conseguir reinar todos os lugares. É então quando Luigi é raptado por Bowser e o usa para procurar Mario, o único capaz de deter o Koopa e reestabelexcer a paz. Mario terá que aprender como viver nesse novo reino perigoso, passando por vários biomas, aprender a dirigir carros, utilizar itens que o fazem soltar bolas de fogo das mãos, virar um animal e andar em plataformas nada confiáveis. Também estará acompanhados de amigos, como Toad (Keegan-Michael Key) e Donkey Kong (Seth Rogan).</p>
+        <div class="ilustracoes init-hidden">
+            <div style="background-image: url(src/img/1.webp);"></div>
+            <div style="background-image: url(src/img/2.png);"></div>
+            <div style="background-image: url(src/img/3.webp);"></div>
+            <div style="background-image: url(src/img/4.jpg);"></div>
+            <div style="background-image: url(src/img/5.jpg);"></div>
+            <div style="background-image: url(src/img/6.jpg);"></div>
+            <div style="background-image: url(src/img/7.jpg);"></div>
+            <div style="background-image: url(src/img/8.webp);"></div>
+        </div>
+    </section>
 
     <script type="text/javascript" src="src/js/modal.js"></script>
 </body>
